Revert "fix portfolio grid on mobile screen"
This reverts commit 9fa423ab3bd3cb86f90035ad97934d20ad51b1d6.

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -47,9 +47,3 @@
     width: 100%;
     height: 100%;
 }
-
-@media (max-width: 760px){
-    #portfolio .polio-item .polio-img{
-        background-size: 100% 100%;
-    }
-}
